--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,20 +25,20 @@ h3{
     font-size: 1.6rem;
 }
 
-.card:hover {
-    cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px -3px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 15px -3px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 15px -3px rgba(0,0,0,0.75);
-}
-
-
-.card-carousel {
-    display: flex;
-    flex-wrap: wrap;
+.card-wrapper {
+    padding: .5rem;
     gap: .5rem;
 }
 
+
+.card:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 15px -4px rgba(0,0,0,0.2);
+}
+
+.carousel-indicators{
+    margin-top: -4rem;
+}
 
 .categorias-populares {
     font-size: 2.5rem;
