Separado el css del inicio con producto y se agrego boton para cambiar la iamgen del producto

--- a/assets/css/producto.css
+++ b/assets/css/producto.css
@@ -36,20 +36,6 @@ h3{
     box-shadow: 0px 0px 15px -4px rgba(0,0,0,0.2);
 }
 
-.categorias-populares {
-    font-size: 2.5rem;
-    font-weight: 500;
-    border-bottom: 1px solid #000;
-    margin-bottom: 5px;
-    color: #000;
-    margin: 1rem;
-}
-
-.categorias-populares:hover {
-    border-bottom: 5px solid #000;
-    margin-bottom: 0;
-    cursor: pointer;
-}
 
 .footer-container {
     text-align: right;
@@ -64,4 +50,21 @@ h3{
 
 a {
     cursor: pointer;
+}
+
+.img-btn {
+    border-radius: 50%;
+    font-size: .8rem;
+    color: #000;
+    background-color: #fff;
+}
+
+.product-img {
+    position: relative;
+}
+
+.img-buttons {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
 }
