Mejorado el perfil del usuario y se arreglo un error en el navbar

--- a/assets/css/producto.css
+++ b/assets/css/producto.css
@@ -22,7 +22,11 @@ h3{
 }
 
 .shopping-cart {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
+}
+
+.profile {
+    font-size: 1.3rem;
 }
 
 .card-wrapper {
