--- a/assets/css/perfil.css
+++ b/assets/css/perfil.css
@@ -22,9 +22,12 @@ h3{
 }
 
 .shopping-cart {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
 }
 
+.profile {
+    font-size: 1.3rem;
+}
 .card-wrapper {
     padding: .5rem;
     gap: .5rem;
@@ -78,4 +81,14 @@ a {
 .order-card:hover {
     cursor: pointer;
     box-shadow: 0px 0px 15px -4px rgba(0,0,0,0.2);
+}
+
+
+.sidebar a{
+    font-size: 1rem;
+    color: #000;
+}
+
+.sidebar a:hover{
+    color: #575757;
 }
