--- a/assets/css/categoria.css
+++ b/assets/css/categoria.css
@@ -29,6 +29,16 @@ h3{
     font-size: 1.3rem;
 }
 
+.extra-nav {
+    font-size: .9rem;
+    padding: .4rem;
+}
+
+.extra-nav a{
+    color: #000;
+}
+
+
 
 .card:hover {
     cursor: pointer;
