--- a/assets/css/producto.css
+++ b/assets/css/producto.css
@@ -29,6 +29,15 @@ h3{
     font-size: 1.3rem;
 }
 
+.extra-nav {
+    font-size: .9rem;
+    padding: .4rem;
+}
+
+.extra-nav a{
+    color: #000;
+}
+
 .card-wrapper {
     padding: .5rem;
     gap: .5rem;
